--- a/css/index.css
+++ b/css/index.css
@@ -57,25 +57,106 @@ main small {
 }
 
 .simulation-description {
-  opacity: 0;
   position: absolute;
+  left: 60vw;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
   text-align: center;
-  width: 40%;
   font-size: 1.1rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgb(61, 19, 61);
   transition: opacity 0.3s ease-in-out;
-  opacity: 0;
-  z-index: 999;
-  transform: translate(70%, 900%);
+  z-index: 998;
+  /* transform: translate(70%, 900%); */
   background-color: white;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   color: rgb(50, 50, 50);
   padding: 0.5rem;
 }
 
 .simulation-description-visible {
   opacity: 1;
+}
+
+.container-description-button {
+  position: absolute;
+  left: 90vw;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 999;
+  background-color: rgba(255, 212, 255, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: -3px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
+.container-description-button button {
+  background-color: white;
+  color: black;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.container-description-content {
+  position: absolute;
+  left: 70vw;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 999;
+  background-color: rgb(255, 212, 255);
+  padding: 1rem;
+  box-shadow: -3px 0px 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  transition: transform 0.3s ease-in-out;
+}
+
+.container-description-content-translated-right {
+  transform: translateX(100%);
+  opacity: 0;
+}
+
+.container-description-content-translated-left {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+.container-description-content small {
+  text-align: justify;
+}
+
+.container-description-content h2 {
+  margin: 0;
+  margin-bottom: 0.2rem;
+}
+.container-description-content h2:nth-child(3) {
+  margin-top: 1rem;
+}
+
+.container-description-content :is(small, h2) {
+  width: 100%;
+}
+
+.container-description-content button {
+  background-color: white;
+  padding: 0.4rem;
+  width: 7rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: rgb(61, 19, 61);
+  color: white;
+  margin-top: 1rem;
 }
 
 .hidden {
